BusOne/src/objects/Plan_Tactic_vod__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_vod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Associates Plan Tactic to Account Plan</description>
        <label>Account Plan</label>
        <referenceTo>Account_Plan_vod__c</referenceTo>
        <relationshipLabel>Plan Tactics</relationshipLabel>
        <relationshipName>Plan_Tactics_vod</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Tactic_Progress_vod__c</fullName>
        <label>Account Tactic Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Completed_Account_Tactics_vod__c</fullName>
        <label>Completed Account Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates Plan Tactic to Product</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Plan Tactics</relationshipLabel>
        <relationshipName>Plan_Tactics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Share_With_vod__c</fullName>
        <description>Used to facilitate record sharing among Account Team Members. Team Members whose Role matches any of the selected values will have visibility to the record.</description>
        <inlineHelpText>Team Members whose Role matches any of these selected values will have visibility to the record.</inlineHelpText>
        <label>Share With</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market_Access_vod</fullName>
                </value>
                <value>
                    <fullName>Medical_vod</fullName>
                </value>
                <value>
                    <fullName>Sales_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending_vod</fullName>
                </value>
                <value>
                    <fullName>Completed_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Account_Tactics_vod__c</fullName>
        <label>Total Account Tactics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan Tactic</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Tactics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>